<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My Notes</string>
    <string name="edit_note_label">Edit Note</string>
    <string name="search_hint">Search notes...</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="unknown_error">Something went wrong. Please try again.</string>
    <string name="check_your_internet_connection_and_try_again">No internet connection. Please check your network and try again.</string>
    <string name="error_auth_failed">Authentication failed. Please check your credentials.</string>
    <string name="error_google_sign_in_failed">Google Sign-in failed. Please try again.</string>
    <string name="error_user_not_found">No account found with this email.</string>
    <string name="error_wrong_password">Incorrect password. Please try again.</string>
    <string name="error_too_many_requests">Too many attempts. Please try again later.</string>
    
    <string name="sort_newest">Newest First</string>
    <string name="sort_oldest">Oldest First</string>
    <string name="add_new_note">Add New Note</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="login_welcome">Welcome to Notes</string>
    <string name="login_subtitle">Sync your notes safely in the cloud</string>
    
    <!-- New Strings -->
    <string name="no_notes_found">No notes found</string>
    <string name="tap_to_add_first_note">Tap the + button to add your first note</string>
    <string name="save_changes">Save Changes</string>
    <string name="about_rwazi_todo">About Rwazi Todo</string>
    <string name="about_description">Stay organized and productive with our premium note-taking experience.</string>
    <string name="delete_note">Delete Note</string>
    <string name="back">Back</string>
    <string name="sort_notes">Sort Notes</string>
    <string name="add_note">Add Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="start_typing_hint">Start typing...</string>
    <string name="settings">Settings</string>
</resources>